# lookout

./: .env.example  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 05fdf0d59c7c_upd_updated_task_id.py  80ce7cc36680_updated_analysis_model.py  95fbc8e94806_added_analysis.py  9b5d2c436c63_added_video.py  9e01f21f38dd_user_update.py  a5c81333789c_add_payment_date_to_payments.py  a87d64249ff7_added_logs.py  db51b9de7fd4_added_video.py  e0c7aed7777b_upd_analysis.py  fff7a74c39c4_user_init.py
src/: main.py
src/api/http/: api_router.py  dependencies.py  exceptions.py
src/api/http/v1/: router.py
src/api/http/v1/endpoints/: analysis_result.py  auth.py  logs.py  model.py  payment.py  video.py
src/core/: config.py
src/core/app/: app_creator.py  handlers.py  lifespan.py
src/core/connections/: connection.py
src/core/connections/database/: postgres_connection.py
src/core/logger/: logger.py
src/core/storage/: s3_storage.py  storage.py
src/inference/: model_inference.py
src/models/: __init__.py  analysis_result_model.py  annotations.py  logs_model.py  payment_model.py  user_model.py  video_model.py
src/repo/: analysis_result_repo.py  logs_repo.py  payment_repo.py  user_repo.py  video_repo.py
src/schemas/: analysis_result_schema.py  auth_schema.py  logs_schema.py  model_schema.py  payment_schema.py  user_schema.py  video_schema.py
src/schemas/mixins/: id_mixin.py  time_mixin.py
src/schemas/responses/: auth_response.py  general_response.py
src/usecases/: analysis_result_usecase.py  logs_usecase.py  model_usecase.py  payment_usecase.py  repository.py  user_usecase.py  video_usecase.py
src/utils/: hashing_password.py  model_adapter.py
worker/: celery_app.py  celery_tasks.py
