[project]
name = "lookout"
version = "0.1.0"
description = ""
authors = [
    {name = "mkhmtolzhas",email = "mkhmtcore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "celery[redis] (>=5.5.1,<6.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "authx (>=1.4.2,<2.0.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "boto3 (>=1.37.37,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "torch (>=2.6.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "lookout", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
